# manager-task-test

./: Makefile  README.md  api.dockerfile  bootstrap.py  config.py  docker-compose.yaml  main.py  pyproject.toml
api/: depends.py  router.py  serializers.py
application/: commands.py  exceptions.py  handlers.py  mediator.py  queries.py
infrastructure/: repository.py
interfaces/: mediator.py  task_repository.py
tests/: conftest.py  test_repository.py
